tests/negative/test_attrs_non_type_owning.orb
data Foo {
    x:i32
} (eval (fnc dropFoo (val:Foo::noDrop) () {}));

fnc main () () {
    eval (sym f:Foo);
    eval (+ 0::((abcd f)));
};